// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opencodeAdapter.buildRun argv builds a resume around the captured session id 1`] = `
[
  "/home/u/.opencode/bin/opencode",
  "run",
  "--format",
  "json",
  "--dir",
  "/work",
  "--pure",
  "-s",
  "ses_abc",
  "--",
  "use postgres",
]
`;

exports[`opencodeAdapter.buildRun argv matches the recorded surface 1`] = `
[
  "/home/u/.opencode/bin/opencode",
  "run",
  "--format",
  "json",
  "--dir",
  "/work",
  "--pure",
  "--",
  "do the thing",
]
`;
